@startuml curevoo-class-diagram
' Generated by Backend/scripts/diagrams/generate_class_diagram.py.
' Attributes parsed from prisma/schema.prisma; operations mirror backend service exports.
' Do not edit by hand — re-run the generator instead.
!pragma layout smetana

skinparam dpi 150
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 12
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 75
skinparam roundCorner 6
skinparam classAttributeIconSize 0

skinparam package {
  BackgroundColor #FFFFFF
  BorderColor #B4B9CC
  BorderThickness 1
  FontSize 15
  FontStyle bold
  FontColor #2E3550
}

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #5B4FA8
  BorderThickness 1
  HeaderBackgroundColor #6C5CE7
  FontColor #FFFFFF
  FontSize 13
  FontStyle bold
  AttributeFontSize 11
  AttributeFontColor #232838
  StereotypeFontColor #FFFFFF
}

skinparam enum {
  BackgroundColor #FFFFFF
  BorderColor #8E7CC3
  HeaderBackgroundColor #B9A7E8
  FontColor #241F3D
  FontSize 12
  AttributeFontSize 11
  AttributeFontColor #3A3350
}

skinparam ArrowColor #5B5F72
skinparam ArrowFontSize 10
skinparam ArrowFontColor #4A4F63

title CureVoo — Domain Class Diagram\n<size:11><color:#5B5F72>32 classes · 13 enumerations · attributes from prisma/schema.prisma, operations from backend services</color></size>

package "Identity & Access" #EEF2FB {
  class User {
    - id : string
    - email : string
    - passwordHash : string
    - role : enum
    - name? : string
    - phoneNumber? : string
    - age? : int
    - isEmailVerified : boolean
    - deletedAt? : datetime
    - createdAt : datetime
    - updatedAt : datetime
    --
    + login(email, password) : Session
    + refresh() : Session
    + logoutAllSessions() : void
  }
  class Patient {
    - role = PATIENT
    --
    + bookAppointment(doctorId, slot) : Appointment
    + listMyTreatmentPlans() : TreatmentPlan[]
    + requestMyHistoryRecordUpdate(record) : MedicalHistoryUpdateRequest
    + startCancerDiagnosis() : DiagnosisSession
  }
  class Doctor {
    - role = DOCTOR
    --
    + updateProfile(data) : DoctorProfile
    + listPatients() : Patient[]
    + createPatient(data) : CreatedPatient
    + respondToAppointment(id, decision) : Appointment
    + predictNsclc(patientId) : AiNsclcPredictionRun
    + analyzeGenomicTargets(files) : GenomicAnalysis
  }
  class Admin {
    - role = ADMIN
    --
    + listDoctorsByAdmin() : Doctor[]
    + createDoctorByAdmin(data) : Doctor
    + deletePatientByAdmin(userId) : void
  }
  class PatientProfile {
    - id : string
    - userId : string
    - fullName? : string
    - address? : string
    - phoneNumber? : string
    - age? : int
    - sex? : enum
    - medicalHistory? : string
    - riskFactors? : json
    - qrCode? : string
    - createdAt : datetime
    - updatedAt : datetime
    --
    + updateProfile(data) : void
  }
  class DoctorProfile {
    - id : string
    - userId : string
    - fullName? : string
    - specialization? : string
    - workingAt? : string
    - avatar? : string
    - languages? : json
    - location? : string
    - qualifications? : string
    - experience? : int
    - bio? : string
    - photoUrl? : string
    - qrCode? : string
    - consultationFee? : decimal
    - isActive : boolean
    - createdAt : datetime
    - updatedAt : datetime
    --
    + updateProfile(data) : void
    + regenerateQrCode() : string
  }
  class DoctorAvailableTime {
    - id : string
    - doctorId : string
    - dayOfWeek : int
    - startTime? : string
    - endTime? : string
    - isOn : boolean
    - createdAt : datetime
    - updatedAt : datetime
    --
    + createAvailableTimeSlot(slot) : void
    + updateStatus(isOn) : void
  }
  class DoctorSettings {
    - id : string
    - userId : string
    - language : string
    - notificationsEnabled : boolean
    - createdAt : datetime
    - updatedAt : datetime
  }
  class RefreshTokenSession {
    - id : string
    - userId : string
    - jti : string
    - userAgent? : string
    - ipAddress? : string
    - expiresAt : datetime
    - revokedAt? : datetime
    - replacedByJti? : string
    - revokeReason? : string
    - createdAt : datetime
    - updatedAt : datetime
  }
  class OtpCode {
    - id : string
    - userId : string
    - email : string
    - otpHash : string
    - purpose : enum
    - expiresAt : datetime
    - attempts : int
    - lockedUntil? : datetime
    - usedAt? : datetime
    - createdAt : datetime
  }
}

package "Doctor–Patient Relationships" #F1EFFA {
  class DoctorPatientLink {
    - id : string
    - doctorUserId : string
    - patientUserId : string
    - status : enum
    - createdByDoctor : boolean
    - createdAt : datetime
    - updatedAt : datetime
    --
    + activate() : void
    + deactivate() : void
  }
  class DoctorConnectionRequest {
    - id : string
    - doctorUserId : string
    - patientUserId : string
    - status : enum
    - createdAt : datetime
    - updatedAt : datetime
    - respondedAt? : datetime
    --
    + accept() : void
    + reject() : void
  }
  class CreatedPatient {
    - id : string
    - doctorUserId : string
    - sourcePatientUserId? : string
    - fullName? : string
    - phoneNumber? : string
    - age? : int
    - sex? : enum
    - medicalHistory? : string
    - riskFactors? : json
    - createdAt : datetime
  }
  class PatientDeletionRequest {
    - id : string
    - patientUserId : string
    - doctorUserId : string
    - status : enum
    - createdAt : datetime
    - resolvedAt? : datetime
  }
  class Notification {
    - id : string
    - userId : string
    - type : enum
    - title : string
    - message : string
    - payload? : json
    - isRead : boolean
    - createdAt : datetime
  }
}

package "Clinical Care" #F6EFFA {
  class Appointment {
    - id : string
    - patientUserId? : string
    - createdPatientId? : string
    - doctorUserId : string
    - scheduledAt : datetime
    - appointmentEnd? : datetime
    - reason? : string
    - notes? : string
    - status : enum
    - canceledAt? : datetime
    - createdAt : datetime
    - updatedAt : datetime
    --
    + bookAppointment() : void
    + editAppointment(data) : void
    + cancelAppointment() : void
  }
  class TreatmentPlan {
    - id : string
    - doctorUserId : string
    - patientUserId? : string
    - createdPatientId? : string
    - symptomsLog? : json
    - treatmentPlan? : json
    - createdAt : datetime
    - updatedAt : datetime
    --
    + createTreatmentPlan(data) : void
    + updateTreatmentPlan(data) : void
  }
  class SymptomLog {
    - id : string
    - treatmentPlanId : string
    - symptomType? : string
    - symptomDetails? : string
    - notes? : string
    - logDate : datetime
  }
  class TreatmentRecord {
    - id : string
    - patientUserId : string
    - curevooDetectorResult? : string
    - record? : string
    - createdAt : datetime
    - updatedAt : datetime
  }
  class MedicalHistory {
    - id : string
    - patientUserId? : string
    - createdPatientId? : string
    - record? : json
    - createdAt : datetime
    - updatedAt : datetime
    --
    + createMyHistoryRecord(record) : void
  }
  class MedicalHistoryUpdateRequest {
    - id : string
    - medicalHistoryId : string
    - doctorUserId : string
    - patientUserId? : string
    - proposedRecord : json
    - status : enum
    - createdAt : datetime
    - updatedAt : datetime
    - respondedAt? : datetime
    --
    + respondHistoryUpdateRequest(decision) : void
  }
  class CancerTest {
    - id : string
    - patientUserId : string
    - testDate : datetime
    - result? : string
    - testEnteredData? : json
    - createdAt : datetime
  }
  class TestRecord {
    - id : string
    - patientUserId : string
    - recordDate : datetime
    - recordTitle? : string
    - testRecordData? : json
    - createdAt : datetime
  }
  class CancerResistance {
    - id : string
    - patientUserId : string
    - numberOfRecords : int
    - aiResult? : string
    - lastAdd? : datetime
    - testRecordId? : string
    - createdAt : datetime
  }
}

package "AI Services" #FAF0F4 {
  class AiNsclcPredictionRun {
    - id : string
    - patientId : string
    - doctorId : string
    - predictionVersion? : string
    - requestPayloadJson : json
    - responseJson? : json
    - summaryText? : string
    - earlyFailureProbability? : float
    - earlyFailureRiskLevel? : string
    - durableBenefitProbability? : float
    - durableBenefitRiskLevel? : string
    - interpretationSummary? : string
    - llmExplanationEnabled : boolean
    - status : string
    - errorMessage? : string
    - createdAt : datetime
    --
    + predictNsclc(payload) : void
  }
  class AiNsclcPredictionRunCreated {
    - id : string
    - createdPatientId : string
    - doctorId : string
    - predictionVersion? : string
    - requestPayloadJson : json
    - responseJson? : json
    - summaryText? : string
    - earlyFailureProbability? : float
    - earlyFailureRiskLevel? : string
    - durableBenefitProbability? : float
    - durableBenefitRiskLevel? : string
    - interpretationSummary? : string
    - llmExplanationEnabled : boolean
    - status : string
    - errorMessage? : string
    - createdAt : datetime
  }
  class GenomicAnalysis {
    - runId : string
    - dataSource : string
    - topTargets : RankedTarget[]
    - mlMetrics : MlMetrics
    - reportPath : string
    --
    + analyze(files, topN) : GenomicAnalysis
    + getResult(runId) : GenomicAnalysis
    + getResultReport(runId) : string
  }
}

package "Support & Knowledge" #EFF7F3 {
  class PsychologicalChatSession {
    - id : string
    - patientId : string
    - gracePatientId? : string
    - sessionId? : string
    - redirectUrl? : string
    - createdAt : datetime
    - updatedAt : datetime
    --
    + sendMessage(text) : PsychologicalChatMessage
  }
  class PsychologicalChatMessage {
    - id : string
    - patientId : string
    - chatSessionId? : string
    - sessionId? : string
    - sender : enum
    - message : string
    - createdAt : datetime
  }
  class PsychologicalExerciseLog {
    - id : string
    - patientId : string
    - exerciseType : enum
    - durationMinutes? : int
    - completedAt : datetime
  }
  class EducationalSearchLog {
    - id : string
    - patientId : string
    - question : string
    - answerSummary? : string
    - safetyStatus : enum
    - createdAt : datetime
  }
  class KnowledgeArticle {
    - id : string
    - title : string
    - slug : string
    - category : enum
    - summary : string
    - content : string
    - sources? : json
    - language : string
    - readingTimeMinutes? : int
    - isPublished : boolean
    - createdAt : datetime
    - updatedAt : datetime
  }
}

package "Enumerations" #F7F7F9 {
  enum Role {
    PATIENT
    DOCTOR
    ADMIN
  }
  enum Sex {
    MALE
    FEMALE
    OTHER
  }
  enum OtpPurpose {
    EMAIL_VERIFICATION
    PASSWORD_RESET
  }
  enum PatientLinkStatus {
    ACTIVE
    INACTIVE
  }
  enum ConnectionRequestStatus {
    PENDING
    ACCEPTED
    REJECTED
  }
  enum DeletionRequestStatus {
    PENDING
    KEEP_AS_CREATED_PATIENT
    REMOVE_ONLY
  }
  enum NotificationType {
    PATIENT_DELETE_REQUEST
  }
  enum AppointmentStatus {
    PENDING
    CREATED
    CONFIRMED
    CANCELED
  }
  enum MedicalHistoryUpdateRequestStatus {
    PENDING
    APPROVED
    REJECTED
  }
  enum PsychologicalChatSender {
    PATIENT
    LIORA
  }
  enum PsychologicalExerciseType {
    BOX_BREATHING
    PROGRESSIVE_MUSCLE_RELAXATION
  }
  enum KnowledgeArticleCategory {
    CANCER
    WELLBEING
    CUREVOO
  }
  enum EducationalSearchSafetyStatus {
    ALLOWED
    BLOCKED
    CRISIS
  }
}

User <|-- Patient
User <|-- Doctor
User <|-- Admin

Patient "1" --> "0..1" PatientProfile : has
Doctor "1" --> "0..1" DoctorProfile : has
Doctor "1" --> "0..1" DoctorSettings : has
DoctorProfile "1" --> "0..*" DoctorAvailableTime : defines
User "1" --> "0..*" RefreshTokenSession : opens
User "1" --> "0..*" OtpCode : requests
Doctor "1" --> "0..*" DoctorPatientLink : treats
Patient "1" --> "0..*" DoctorPatientLink : linked by
Doctor "1" --> "0..*" DoctorConnectionRequest : sends
Patient "1" --> "0..*" DoctorConnectionRequest : receives
Doctor "1" --> "0..*" CreatedPatient : creates
Doctor "1" --> "0..*" PatientDeletionRequest : resolves
Patient "1" --> "0..*" PatientDeletionRequest : raises
User "1" --> "0..*" Notification : receives
Doctor "1" --> "0..*" Appointment : hosts
Patient "1" --> "0..*" Appointment : books
CreatedPatient "1" --> "0..*" Appointment : booked for
Doctor "1" --> "0..*" TreatmentPlan : authors
Patient "1" --> "0..*" TreatmentPlan : follows
CreatedPatient "1" --> "0..*" TreatmentPlan : planned for
TreatmentPlan "1" --> "0..*" SymptomLog : tracks
Patient "1" --> "0..*" TreatmentRecord : owns
Patient "1" --> "0..*" MedicalHistory : owns
CreatedPatient "1" --> "0..*" MedicalHistory : owns
MedicalHistory "1" --> "0..*" MedicalHistoryUpdateRequest : proposed on
Doctor "1" --> "0..*" MedicalHistoryUpdateRequest : proposes
Patient "1" --> "0..*" CancerTest : takes
Patient "1" --> "0..*" TestRecord : owns
TestRecord "1" --> "0..*" CancerResistance : informs
Doctor "1" --> "0..*" AiNsclcPredictionRun : requests
Patient "1" --> "0..*" AiNsclcPredictionRun : subject of
CreatedPatient "1" --> "0..*" AiNsclcPredictionRunCreated : subject of
Doctor "1" --> "0..*" AiNsclcPredictionRunCreated : requests
Doctor "1" --> "0..*" GenomicAnalysis : runs
Patient "1" --> "0..1" PsychologicalChatSession : opens
PsychologicalChatSession "1" --> "0..*" PsychologicalChatMessage : contains
Patient "1" --> "0..*" PsychologicalExerciseLog : completes
Patient "1" --> "0..*" EducationalSearchLog : searches

User ..> Role : role
PatientProfile ..> Sex : sex
OtpCode ..> OtpPurpose : purpose
DoctorPatientLink ..> PatientLinkStatus : status
DoctorConnectionRequest ..> ConnectionRequestStatus : status
PatientDeletionRequest ..> DeletionRequestStatus : status
Notification ..> NotificationType : type
Appointment ..> AppointmentStatus : status
MedicalHistoryUpdateRequest ..> MedicalHistoryUpdateRequestStatus : status
PsychologicalChatMessage ..> PsychologicalChatSender : sender
PsychologicalExerciseLog ..> PsychologicalExerciseType : exerciseType
KnowledgeArticle ..> KnowledgeArticleCategory : category
EducationalSearchLog ..> EducationalSearchSafetyStatus : safetyStatus

@enduml
